2011-07-23  Kostas Nakos  <knakos@gmail.com>
* atari.c: Use FPS defines in autoframeskip
* android/*: Fix a nasty bug, when orientation was changed during the
             preferences activity,
             added shadow rectangle around console keys overlay


2011-07-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the OSS 043M cartridge format. The old 034M format is marked as obsolete
  but still supported. Renamed the OSS cartridge formats to include
  information on number of ROM chips (043M/034M - two chip, M091 - one chip).


2011-06-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c: Fixed a bug with eof_of_tape not always being set to 1 when it
  should be, f.e. after a call to CASSETTE_Seek(). When the SIO patch was
  enabled and the tape was Seek'ed past the last block, this could result in
  a call to CASSETTE_IOLineStatus() while CASSETTE_current_block was higher
  than CASSETTE_max_block. This in turn would cause division by 0 (due to
  reading an uninitialilsed value from cassette_baudblock).
  Now eof_of_tape is set properly after every change of either
  CASSETTE_current_block or CASSETTE_max_block, so a dangerous call to
  CASSETTE_IOLineStatus doesn't happen anymore.

* cartridge.c: Fixed a bug introduced in rev. 1.48: CARTRIDGE_StateRead would
  try to read the cartridge's bank state even if the cartridge was not
  present; thus the whole state reading would fail.

* afile.c: Support selecting cartridge type when loading a cartridge by Alt+R.


2011-06-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui.c: Fixed a segfault when opening the "Fullscreen resolution" submenu.
  This was caused by the change in ui.h on 06-20. (reported by Krzysztof
  Karkosza)


2011-06-20  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Fixed a bug with F10 creating interlaced screenshots instead of
  non-interlaced.
